# ModularLDL

./: CMakeLists.txt  ExampleString.cpp  ExampleVector.cpp  Graphics.ixx  GraphicsExample.cpp  SDL1.cpp  main (2).cpp  main.cpp
Framework/: Framework.ixx  SDL1.Events.ixx  SDL1.Graphics.ixx
LDL_WinAPI/: CMakeLists.txt  LDL.WinAPI.Kernel32.ixx  LDL.WinAPI.User32.ixx  LDL.WinAPI.ixx
LDL_WinAPI/1/: LDL.WinAPI.Structs.ixx  LDL.WinAPI.Types.ixx  LDL.WinAPI.ixx
LDL_Window/: CMakeLists.txt  LDL.BaseWindow.ixx  LDL.Context.ixx  LDL.ContextMode.ixx  LDL.Enums.ixx  LDL.Eventer.ixx  LDL.Events.ixx  LDL.Formatter.ixx  LDL.IWindow.ixx  LDL.KeyMap.ixx  LDL.KeyMapping.ixx  LDL.Result.ixx  LDL.RingBuffer.ixx  LDL.UtfConverter.ixx  LDL.Vec2.ixx  LDL.Vec2d.ixx  LDL.Vec2f.ixx  LDL.Vec2i.ixx  LDL.Vec2u.ixx  LDL.WinNT.CreateWindow.ixx  LDL.WinNT.KeyMapper.ixx  LDL.WinNT.MainWindow.ixx  LDL.WinNT.WindowError.ixx  LDL.WinNT.WindowSoftware.ixx  LDL.Window.ixx  LDL.WindowMode.ixx
LDL_stdcpp/source/: memory.cpp  ostream.cpp  string.cpp
LDL_stdcpp/source/windows/: system.cpp  winapi.hpp
LDL_stdcpp/stdcpp/: allocator  allocator.hpp  cstdint  expected  expected.hpp  iostream  memory  memory.hpp  ostream  ostream.hpp  stddef.h  stdint.h  stdlib.h  string  string.h  string.hpp  system.hpp  unique_ptr.hpp  utility  utility.hpp  vector  vector.hpp
SDL/: CMakeLists.txt  SDL.Color.ixx  SDL.Error.ixx  SDL.Events.ixx  SDL.Init.ixx  SDL.Key.ixx  SDL.Loader.ixx  SDL.Mod.ixx  SDL.Palette.ixx  SDL.PixelFormat.ixx  SDL.Rect.ixx  SDL.Surface.ixx  SDL.Types.ixx  SDL.ixx
